#-----------------------------------------------------------------------------~#
# Copyright (c) 2015 Los Alamos National Security, LLC
# All rights reserved.
#-----------------------------------------------------------------------------~#

###### COMMENT OUT TESTS UNTIL CINCH CAN RUN USING MPIRUN/APRUN COMMANDS

# Add test
#if (ENABLE_UNIT_TESTS)
#  cinch_add_unit(test_state_vector test_state_vector.cc)
#  target_link_libraries(test_state_vector ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES})
#
#  cinch_add_unit(test_state test_state.cc)
#  target_link_libraries(test_state ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES})
#endif()

#----------------------------------------------------------------------------~-#
# Formatting options for emacs and vim.
# vim: set tabstop=4 shiftwidth=4 expandtab :
#----------------------------------------------------------------------------~-#
